Add navrar and its style

--- a/index.html
+++ b/index.html
@@ -6,10 +6,41 @@
         <!--fonts-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
-        <link rel = "stylesheet" href = "https://use.fontawesome.com/releases/v6.0.0/css/all.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
+        <link rel="stylesheet" href="vendor\bootstrap-grid.css">
+      <link rel="stylesheet" href="css\style.css">
     </head>
-    
-    <body> 
+    <body>
+        <header>
+            <div class="background-image">
+                <img src="https://i.postimg.cc/sDvx6xST/pexels-pixabay-264591-1.jpg" alt="Women's accessories">
+                </div>
+                <nav class="navbar navbar-expand-md fixed-top">
+                    <a class="navbar-brand"><span class="shop-name">Golden</span></a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-menu" aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>                   
+            
+            <div class="collapse navbar-collapse"  id="mobile-menu">
+            <ul class="navbar-nav ">
+            <li >
+            <a href="#" class="nav-link">Home</a></li>           
+            <li>
+            <a href="#" class="nav-link">Services</a></li> 
+            <li>
+            <a href="#" class="nav-link">Portfolio</a></li>
+           <li>
+            <a href="#" class="nav-link">About</a></li>
+            <li>
+            <a href="#" class="nav-link">Contact</a></li>
+            </ul>
+        </nav>
+        </header>
+
+
+
+
+
+
     </body>
 </html>
